--- a/askme/src/main/resources/application.properties
+++ b/askme/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.initialization-mode=always
 spring.datasource.data=classpath:schema.sql, classpath:data.sql
 
 spring.jpa.database = MYSQL
-spring.jpa.show-sql = true
+spring.jpa.show-sql = false
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.generate-ddl=true
