Fix bug by Sign up as an admin

--- a/askme/src/main/resources/application.properties
+++ b/askme/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8083
 
 spring.datasource.url=jdbc:mysql://localhost:3306/askmedb?createDatabaseIfNotExist=true&serverTimezone=UTC&useLegacyDatetimeCode=false&noTimezoneConversionForDateType=true&useSSL=false
-spring.datasource.username=/*Enter the username of your database*/
-spring.datasource.password=/*Enter the password of your database*/
+spring.datasource.username=root
+spring.datasource.password=
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 spring.datasource.platform=mysql
 spring.datasource.initialization-mode=always
