--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-* linguist-vendored
+static/* linguist-vendored
 *.java linguist-vendored=false
 *.js linguist-vendored=false
 *.html linguist-vendored=false
